--- a/wasmer.toml
+++ b/wasmer.toml
@@ -1,7 +1,7 @@
 [package]
 name = "wasmer/edge-react-starter"
 version = "0.3.0"
-description = "Wasmer's edge-react-starter website"
+description = "Nishant Jha"
 
 [dependencies]
 "sharrattj/static-web-server" = "1"
