--- a/wasmer.toml
+++ b/wasmer.toml
@@ -1,10 +1,10 @@
 [package]
-name = "wasmer/edge-react-starter"
-version = "0.3.0"
+name = "nishant_jha/personal-website"
+version = "0.3.1"
 description = "Nishant Jha"
 
 [dependencies]
-"sharrattj/static-web-server" = "1"
+"sharrattj/static-web-server" = "^1"
 
 [fs]
 public = "dist"
